[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres = "0.7.13"
reqwest = { version = "0.12.22", features = [ "json" ] }
tokio = { version = "1.46.1", features = [ "full" ] }
futures = "0.3.31"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.38.0", features = [ "serialize" ] }
url = "2.2"
chrono = "0.4.41"
regex = "1.11.1"
sha2 = "0.10.9"
unicode-normalization = "0.1.24"
unicode_categories = "0.1.1"
