[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
tokio = { version = "1.46.1", features = [ "full" ] }
tokio-postgres = { version = "0.7.13", features = [ "with-chrono-0_4" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = [ "derive" ] }
